Add support for Atom packages

--- a/playbook.yml
+++ b/playbook.yml
@@ -10,6 +10,7 @@
       - include: tasks/zsh.yml tags=zsh
       - include: tasks/homebrew.yml tags=homebrew
       - include: tasks/node.yml tags=node
+      - include: tasks/atom.yml tags=atom
       - include: tasks/sublime-text.yml tags=sublime-text
       - include: tasks/vagrant.yml tags=vagrant
       - include: tasks/vim.yml tags=vim
